--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: rgb(51, 51, 51);
   padding: 0.5rem;
   color: white;
 }
@@ -11,6 +11,8 @@
 .titulo {
   display: flex;
   align-items: center;
+  font-weight: bold;
+  color: grey;
 }
 
 .nav-list {
