--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,12 @@
   font-size: 1.5rem;
   cursor: pointer;
 }
+
+
+.parrafo{
+  text-align: center;
+  font-size: 2rem;
+  &:hover{
+    color: orange;
+  }
+}
