--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,14 @@
 .parrafo{
   text-align: center;
   font-size: 2rem;
+  text-decoration: underline;
+  margin-bottom: 10px;
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
+
   &:hover{
-    color: orange;
+    transform: scale(1.1) rotate(5deg);
+    color:orange;
   }
 }
+
