--- a/src/App.css
+++ b/src/App.css
@@ -15,23 +15,30 @@
   color: grey;
 }
 
+/* Estilo para los enlaces de la barra de navegación */
 .nav-list {
   list-style: none;
-  display: flex;
-  gap: 1rem;
-  margin: 0;
   padding: 0;
+  display: flex;
+  gap: 20px; /* Espacio entre los enlaces */
 }
 
-.nav-list li a {
-  color: white;
+.nav-link {
   text-decoration: none;
+  color: hsl(0, 0%, 96%);
   font-weight: bold;
-  font-size: 1.2rem;
-  &:hover{
-    color: red;
+  padding: 10px 20px; 
+  border: 1px solid #ccc; 
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s; 
+
+  &:hover {
+      background-color: #007BFF; 
+      color: #fff; 
   }
 }
+
+
 
 .cart-icon {
   font-size: 1.5rem;
@@ -100,4 +107,57 @@
 
 .AgregarCarrito:hover {
   background-color: #1e7e34;
+}
+
+/* ESTILOS PARA MI CONTACTO */
+
+
+.contact-form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f7f7f7;
+}
+
+.contact-form h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.contact-form textarea {
+  resize: vertical;
+}
+
+.contact-form button {
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.contact-form button:hover {
+  background-color: #0056b3;
 }
