--- a/src/App.css
+++ b/src/App.css
@@ -85,15 +85,20 @@
 }
 
 .Boton {
-  font-size: 20px;
+  font-size: 15px;
   border: none;
-  background-color: hwb(207 5% 1%);
+  background-color: rgb(10, 10, 10);
   color: white;
   cursor: pointer;
+  margin: 10px;
+  padding: 15px;
+  
 }
 
 .Boton:hover {
-  background-color: hsl(56, 94%, 50%);
+  background-color: hsl(226, 94%, 47%);
+  color: rgb(255, 187, 0);
+
 }
 
 .Numero {
@@ -174,7 +179,12 @@
   background-color: #fafafa;
   width: 25%;
   margin: 1%;
+  border: solid 2px;
   
+}
+
+.card h1{
+  text-align: center;
 }
 
 .card a {
@@ -184,6 +194,10 @@
   font-weight: bold;
   margin-top: 10px;
   transition: color 0.3s ease-in-out;
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+  ;
 }
 
 .card a:hover {
@@ -194,6 +208,7 @@
 
 .card p{
   font-weight: bold;
+  text-align: center;
 }
 
 
@@ -206,3 +221,14 @@
   width: 100%;
   height: 300px;
 }
+
+.titulo-4{
+  text-align: center;
+  color: red;
+  font-size: 75px;
+
+  &:hover{
+    color: blue;
+  }
+}
+
