--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -21,21 +19,21 @@
   list-style: none;
   padding: 0;
   display: flex;
-  gap: 20px; 
+  gap: 20px;
 }
 
 .nav-link {
   text-decoration: none;
   color: hsl(0, 0%, 96%);
   font-weight: bold;
-  padding: 10px 20px; 
-  border: 1px solid #ccc; 
+  padding: 10px 20px;
+  border: 1px solid #ccc;
   border-radius: 5px;
-  transition: background-color 0.3s, color 0.3s; 
+  transition: background-color 0.3s, color 0.3s;
 
   &:hover {
-      background-color: #007BFF; 
-      color: #fff; 
+    background-color: #007BFF;
+    color: #fff;
   }
 }
 
@@ -47,13 +45,13 @@
 
 }
 
-.cart-counter{
+.cart-counter {
   margin-left: 15px;
   padding-right: 20px;
 }
 
 
-.parrafo{
+.parrafo {
   text-align: center;
   font-size: 4rem;
   text-decoration: underline;
@@ -61,9 +59,9 @@
   transform: scale(1);
   transition: transform 0.3s ease-in-out;
 
-  &:hover{
+  &:hover {
     transform: scale(1.1) rotate(5deg);
-    color:orange;
+    color: orange;
   }
 }
 
@@ -92,7 +90,7 @@
   cursor: pointer;
   margin: 10px;
   padding: 15px;
-  
+
 }
 
 .Boton:hover {
@@ -107,15 +105,15 @@
 }
 
 .AgregarCarrito {
-  font-size: px; 
-  width: 160px; 
-  height: 50px; 
+  font-size: px;
+  width: 160px;
+  height: 50px;
   background-color: #28a745;
   color: white;
   border: none;
   cursor: pointer;
-  text-transform: uppercase; 
-  letter-spacing: 1px; 
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .AgregarCarrito:hover {
@@ -175,22 +173,22 @@
   background-color: #0056b3;
 }
 
-.card{
+.card {
   background-color: #fafafa;
   width: 25%;
   margin: 1%;
   border: solid 2px;
-  
+
 }
 
-.card h1{
+.card h1 {
   text-align: center;
 }
 
 .card a {
   display: block;
   text-decoration: none;
-  color: #f08c09; 
+  color: #f08c09;
   font-weight: bold;
   margin-top: 10px;
   transition: color 0.3s ease-in-out;
@@ -206,29 +204,176 @@
 
 
 
-.card p{
+.card p {
   font-weight: bold;
   text-align: center;
 }
 
 
-.prueba{
+.prueba {
   display: flex;
   flex-wrap: wrap;
 }
 
-.img{
+.img {
   width: 100%;
   height: 300px;
 }
 
-.titulo-4{
+.titulo-4 {
   text-align: center;
   color: red;
   font-size: 75px;
 
-  &:hover{
+  &:hover {
     color: blue;
   }
 }
 
+
+
+.cart-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+
+.cart-list {
+  list-style: none;
+  padding: 0;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+}
+
+.cart-item-details {
+  display: flex;
+  align-items: center;
+}
+
+.cart-item-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.cart-item-remove {
+  background-color: #ff5656;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+
+.empty-cart {
+  text-align: center;
+  padding: 50px 0;
+}
+
+.empty-cart-title {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.empty-cart-link {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+
+
+.cart-total {
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+.cart-clear-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.cart-clear-button:hover {
+  background-color: #c9eb0a;
+  color: black !important;
+  font-weight: bold;
+}
+
+
+
+.cart-finalizar-compra {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 50px;
+}
+
+.cart-finalizar-compra:hover {
+  background-color: #45a049;
+}
+
+
+
+.boton-5 {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #3498db;
+  color: #080808;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  font-weight: bold;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
+
+  
+  margin: auto;
+  display: block;
+}
+
+
+
+.compra-finalizada {
+  text-align: center;
+  padding: 20px;
+  background-color: #f8f8f8; 
+  border-radius: 10px; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+.compra-finalizada h1 {
+  color: #3498db; /* Color del texto */
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+
+.compra-finalizada h2 {
+  color: #555; /* Color del subtitulo */
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.compra-finalizada p {
+  color: #777; 
+  font-size: 16px;
+  margin-bottom: 0;
+  font-size: 70px;
+}
