--- a/src/App.css
+++ b/src/App.css
@@ -377,3 +377,29 @@
   margin-bottom: 0;
   font-size: 70px;
 }
+
+
+.cart-clear-button {
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: 10px; 
+}
+
+
+.cart-finalizar-compra {
+  background-color: #4caf50;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  display: inline-block;
+}
+
+.cart-finalizar-compra:hover {
+  background-color: #45a049; 
+}
